added gallery slideshow

--- a/site/index.html
+++ b/site/index.html
@@ -78,6 +78,93 @@
           <figure>
             <img alt="1" src="images/photography/1.jpg">
           </figure>
+          <figure>
+            <img alt="10" src="images/photography/10.jpg">
+          </figure>
+          <figure>
+            <img alt="11" src="images/photography/11.jpg">
+          </figure>
+          <figure>
+            <img alt="12" src="images/photography/12.jpg">
+          </figure>
+          <figure>
+            <img alt="13" src="images/photography/13.jpg">
+          </figure>
+          <figure>
+            <img alt="14" src="images/photography/14.jpg">
+          </figure>
+          <figure>
+            <img alt="15" src="images/photography/15.jpg">
+          </figure>
+          <figure>
+            <img alt="16" src="images/photography/16.jpg">
+          </figure>
+          <figure>
+            <img alt="17" src="images/photography/17.jpg">
+          </figure>
+          <figure>
+            <img alt="18" src="images/photography/18.jpg">
+          </figure>
+          <figure>
+            <img alt="19" src="images/photography/19.jpg">
+          </figure>
+          <figure>
+            <img alt="2" src="images/photography/2.jpg">
+          </figure>
+          <figure>
+            <img alt="20" src="images/photography/20.jpg">
+          </figure>
+          <figure>
+            <img alt="21" src="images/photography/21.jpg">
+          </figure>
+          <figure>
+            <img alt="22" src="images/photography/22.jpg">
+          </figure>
+          <figure>
+            <img alt="23" src="images/photography/23.jpg">
+          </figure>
+          <figure>
+            <img alt="24" src="images/photography/24.jpg">
+          </figure>
+          <figure>
+            <img alt="25" src="images/photography/25.jpg">
+          </figure>
+          <figure>
+            <img alt="26" src="images/photography/26.jpg">
+          </figure>
+          <figure>
+            <img alt="29" src="images/photography/29.jpg">
+          </figure>
+          <figure>
+            <img alt="3" src="images/photography/3.jpg">
+          </figure>
+          <figure>
+            <img alt="30" src="images/photography/30.jpg">
+          </figure>
+          <figure>
+            <img alt="31" src="images/photography/31.jpg">
+          </figure>
+          <figure>
+            <img alt="32" src="images/photography/32.jpg">
+          </figure>
+          <figure>
+            <img alt="4" src="images/photography/4.jpg">
+          </figure>
+          <figure>
+            <img alt="5" src="images/photography/5.jpg">
+          </figure>
+          <figure>
+            <img alt="6" src="images/photography/6.jpg">
+          </figure>
+          <figure>
+            <img alt="7" src="images/photography/7.jpg">
+          </figure>
+          <figure>
+            <img alt="8" src="images/photography/8.jpg">
+          </figure>
+          <figure>
+            <img alt="9" src="images/photography/9.jpg">
+          </figure>
           <a class="next" href="#">&gt;</a>
         </article>
       </div>
