--- a/site/index.html
+++ b/site/index.html
@@ -47,7 +47,6 @@
           <nav>
             <a href="#paintings">Paintings</a>
             <a href="#photography">Photography</a>
-            <a href="#installations">Installations</a>
           </nav>
         </section>
         <section id="ante-poetry">
@@ -73,6 +72,52 @@
         </section>
       </div>
       <div id="art">
+        <article id="paintings">
+          <a class="previous" href="#">&lt;</a>
+          <figure>
+            <img alt="10a" src="images/paintings/10a.jpg">
+          </figure>
+          <figure>
+            <img alt="11a" src="images/paintings/11a.jpg">
+          </figure>
+          <figure>
+            <img alt="12a" src="images/paintings/12a.jpg">
+          </figure>
+          <figure>
+            <img alt="13a" src="images/paintings/13a.jpg">
+          </figure>
+          <figure>
+            <img alt="14a" src="images/paintings/14a.jpg">
+          </figure>
+          <figure>
+            <img alt="1a" src="images/paintings/1a.jpg">
+          </figure>
+          <figure>
+            <img alt="2a" src="images/paintings/2a.jpg">
+          </figure>
+          <figure>
+            <img alt="3a" src="images/paintings/3a.jpg">
+          </figure>
+          <figure>
+            <img alt="4a" src="images/paintings/4a.jpg">
+          </figure>
+          <figure>
+            <img alt="5a" src="images/paintings/5a.jpg">
+          </figure>
+          <figure>
+            <img alt="6a" src="images/paintings/6a.jpg">
+          </figure>
+          <figure>
+            <img alt="7a" src="images/paintings/7a.jpg">
+          </figure>
+          <figure>
+            <img alt="8a" src="images/paintings/8a.jpg">
+          </figure>
+          <figure>
+            <img alt="9a" src="images/paintings/9a.jpg">
+          </figure>
+          <a class="next" href="#">&gt;</a>
+        </article>
         <article id="photography">
           <a class="previous" href="#">&lt;</a>
           <figure>
