--- a/site/index.html
+++ b/site/index.html
@@ -71,6 +71,54 @@
           </nav>
         </section>
       </div>
+      <div id="contact">
+        <div class="address">
+          <h2>London</h2>
+          <address>
+            90 Cheyne Walk
+            <br>
+            London SW3 5BB
+            <br>
+            United Kingdom
+          </address>
+          <p>
+            Mobile: +44 7770 752727
+          </p>
+        </div>
+        <div class="address">
+          <h2>Berlin</h2>
+          <address>
+            Unter den Linden 14
+            <br>
+            10117 Berlin
+            <br>
+            Germany
+          </address>
+          <p>
+            Tel: +49 30 20626883
+            <br>
+            Fax: +49 30 20632893
+            <br>
+            Mobile: +49 151 11545630
+          </p>
+          <p>
+            <a href="mailto:joseph@josephtong.de">joseph@josephtong.de</a>
+          </p>
+        </div>
+        <div class="address">
+          <h2>Hong Kong</h2>
+          <address>
+            Suite 1608 · The Parkside
+            <br>
+            88 Queensway
+            <br>
+            Hong Kong
+          </address>
+        </div>
+        <div class="created-by">
+          <a href="http://www.hagenburger.net/">Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger</a>
+        </div>
+      </div>
       <div id="art">
         <article id="paintings">
           <a class="previous" href="#">&lt;</a>
