added london interior images

--- a/site/index.html
+++ b/site/index.html
@@ -66,8 +66,7 @@
         <section id="ante-interior">
           <h2>Ante/Interior</h2>
           <nav>
-            <a href="#">Berlin</a>
-            <a href="#">London</a>
+            <a href="#london">London</a>
           </nav>
         </section>
       </div>
@@ -75,9 +74,9 @@
         <div class="address">
           <h2>London</h2>
           <address>
-            90 Cheyne Walk
+            8 More’s Garden
             <br>
-            London SW3 5BB
+            London, SW3 5BB
             <br>
             United Kingdom
           </address>
@@ -95,9 +94,9 @@
             Germany
           </address>
           <p>
-            Tel: +49 30 20626883
+            Tel: +49 30 20913994
             <br>
-            Fax: +49 30 20632893
+            Fax: +49 30 20672921
             <br>
             Mobile: +49 151 11545630
           </p>
@@ -108,12 +107,15 @@
         <div class="address">
           <h2>Hong Kong</h2>
           <address>
-            Suite 1608 · The Parkside
+            Suite 1608 · Pacific Place Apartments
             <br>
             88 Queensway
             <br>
             Hong Kong
           </address>
+          <p>
+            Mobile: +852 6220 9898
+          </p>
         </div>
         <div class="created-by">
           <a href="http://www.hagenburger.net/">Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger</a>
@@ -122,21 +124,6 @@
       <div id="art">
         <article id="paintings">
           <a class="previous" href="#">&lt;</a>
-          <figure>
-            <img alt="10a" src="images/paintings/10a.jpg">
-          </figure>
-          <figure>
-            <img alt="11a" src="images/paintings/11a.jpg">
-          </figure>
-          <figure>
-            <img alt="12a" src="images/paintings/12a.jpg">
-          </figure>
-          <figure>
-            <img alt="13a" src="images/paintings/13a.jpg">
-          </figure>
-          <figure>
-            <img alt="14a" src="images/paintings/14a.jpg">
-          </figure>
           <figure>
             <img alt="1a" src="images/paintings/1a.jpg">
           </figure>
@@ -164,12 +151,51 @@
           <figure>
             <img alt="9a" src="images/paintings/9a.jpg">
           </figure>
+          <figure>
+            <img alt="10a" src="images/paintings/10a.jpg">
+          </figure>
+          <figure>
+            <img alt="11a" src="images/paintings/11a.jpg">
+          </figure>
+          <figure>
+            <img alt="12a" src="images/paintings/12a.jpg">
+          </figure>
+          <figure>
+            <img alt="13a" src="images/paintings/13a.jpg">
+          </figure>
+          <figure>
+            <img alt="14a" src="images/paintings/14a.jpg">
+          </figure>
           <a class="next" href="#">&gt;</a>
         </article>
         <article id="photography">
           <a class="previous" href="#">&lt;</a>
           <figure>
             <img alt="1" src="images/photography/1.jpg">
+          </figure>
+          <figure>
+            <img alt="2" src="images/photography/2.jpg">
+          </figure>
+          <figure>
+            <img alt="3" src="images/photography/3.jpg">
+          </figure>
+          <figure>
+            <img alt="4" src="images/photography/4.jpg">
+          </figure>
+          <figure>
+            <img alt="5" src="images/photography/5.jpg">
+          </figure>
+          <figure>
+            <img alt="6" src="images/photography/6.jpg">
+          </figure>
+          <figure>
+            <img alt="7" src="images/photography/7.jpg">
+          </figure>
+          <figure>
+            <img alt="8" src="images/photography/8.jpg">
+          </figure>
+          <figure>
+            <img alt="9" src="images/photography/9.jpg">
           </figure>
           <figure>
             <img alt="10" src="images/photography/10.jpg">
@@ -202,9 +228,6 @@
             <img alt="19" src="images/photography/19.jpg">
           </figure>
           <figure>
-            <img alt="2" src="images/photography/2.jpg">
-          </figure>
-          <figure>
             <img alt="20" src="images/photography/20.jpg">
           </figure>
           <figure>
@@ -229,9 +252,6 @@
             <img alt="29" src="images/photography/29.jpg">
           </figure>
           <figure>
-            <img alt="3" src="images/photography/3.jpg">
-          </figure>
-          <figure>
             <img alt="30" src="images/photography/30.jpg">
           </figure>
           <figure>
@@ -240,23 +260,23 @@
           <figure>
             <img alt="32" src="images/photography/32.jpg">
           </figure>
+          <a class="next" href="#">&gt;</a>
+        </article>
+      </div>
+      <div id="interior">
+        <article id="london">
+          <a class="previous" href="#">&lt;</a>
           <figure>
-            <img alt="4" src="images/photography/4.jpg">
+            <img alt="No" src="images/london/No.1.jpg">
           </figure>
           <figure>
-            <img alt="5" src="images/photography/5.jpg">
+            <img alt="No" src="images/london/No.2.jpg">
           </figure>
           <figure>
-            <img alt="6" src="images/photography/6.jpg">
+            <img alt="No" src="images/london/No.3.jpg">
           </figure>
           <figure>
-            <img alt="7" src="images/photography/7.jpg">
-          </figure>
-          <figure>
-            <img alt="8" src="images/photography/8.jpg">
-          </figure>
-          <figure>
-            <img alt="9" src="images/photography/9.jpg">
+            <img alt="No" src="images/london/No.4.jpg">
           </figure>
           <a class="next" href="#">&gt;</a>
         </article>
