--- a/site/index.html
+++ b/site/index.html
@@ -118,7 +118,9 @@
           </p>
         </div>
         <div class="created-by">
-          <a href="http://www.hagenburger.net/">Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger</a>
+          <a href="http://www.hagenburger.net/" title="Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger">
+            <img alt="Design, SCSS, CSS3, HTML5 and jQuery by Nico Hagenburger" src="images/layout/nico-hagenburger.png">
+          </a>
         </div>
       </div>
       <div id="art">
