--- a/site/index.html
+++ b/site/index.html
@@ -74,7 +74,7 @@
         <div class="address">
           <h2>London</h2>
           <address>
-            8 More’s Garden
+            90 Cheyne Walk
             <br>
             London, SW3 5BB
             <br>
@@ -107,7 +107,7 @@
         <div class="address">
           <h2>Hong Kong</h2>
           <address>
-            Suite 1608 · Pacific Place Apartments
+            Suite 1608, The Parkside
             <br>
             88 Queensway
             <br>
