added hash to javascripts

--- a/site/index.html
+++ b/site/index.html
@@ -21,14 +21,14 @@
     <meta content="width=device-width; initial-scale=1.0" name="viewport">
     <link href="favicon.ico" rel="shortcut icon">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="stylesheets/josephtong.css?v=2" rel="stylesheet">
+    <link href="stylesheets/josephtong.css?v=3" rel="stylesheet">
     <script src="javascripts/vendor/modernizr-1.5.min.js"></script>
     <script async src="//use.typekit.com/ith3lis.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script>
       !window.jQuery && document.write(unescape('%3Cscript src="/javascripts/vendor/jquery-1.4.2.min.js"%3E%3C/script%3E'))
     </script>
-    <script src="javascripts/josephtong.js"></script>
+    <script src="javascripts/josephtong.js?682afa1"></script>
   </head>
   <body>
     <header>
