--- a/site/index.html
+++ b/site/index.html
@@ -73,26 +73,14 @@
       <div id="contact">
         <div class="address">
           <h2>London</h2>
-          <address>
-            90 Cheyne Walk
-            <br>
-            London, SW3 5BB
-            <br>
-            United Kingdom
-          </address>
+          <address>90 Cheyne Walk<br>London, SW3 5BB<br>United Kingdom</address>
           <p>
             Mobile: +44 7770 752727
           </p>
         </div>
         <div class="address">
           <h2>Berlin</h2>
-          <address>
-            Unter den Linden 14
-            <br>
-            10117 Berlin
-            <br>
-            Germany
-          </address>
+          <address>Unter den Linden 14<br>10117 Berlin<br>Germany</address>
           <p>
             Tel: +49 30 20913994
             <br>
@@ -106,13 +94,7 @@
         </div>
         <div class="address">
           <h2>Hong Kong</h2>
-          <address>
-            Suite 1608, The Parkside
-            <br>
-            88 Queensway
-            <br>
-            Hong Kong
-          </address>
+          <address>Suite 1608, The Parkside<br>88 Queensway<br>Hong Kong</address>
           <p>
             Mobile: +852 6220 9898
           </p>
