separate pages for art; added info to paintings

--- a/site/index.html
+++ b/site/index.html
@@ -27,7 +27,7 @@
     <script>
       !window.jQuery && document.write(unescape('%3Cscript src="/javascripts/vendor/jquery-1.4.2.min.js"%3E%3C/script%3E'))
     </script>
-    <script src="javascripts/josephtong.js?9f2b0b2"></script>
+    <script src="javascripts/josephtong.js?4852d85"></script>
   </head>
   <body>
     <header>
@@ -44,7 +44,14 @@
         <section id="ante-art">
           <h2>Ante/<span>Art</span></h2>
           <nav>
-            <a href="#paintings">Paintings</a>
+            <span>Paintings</span>
+            <nav>
+              <a href="#solus">Solus</a>
+              <a href="#abeo">Abeo</a>
+              <a href="#existentia">Existentia</a>
+              <a href="#anon">Anon</a>
+              <a href="#pulpa">Pulpa</a>
+            </nav>
             <a href="#photography">Photography</a>
           </nav>
         </section>
@@ -106,51 +113,125 @@
         </div>
       </div>
       <div id="art">
-        <article id="paintings">
+        <article id="abeo">
+          <h2>Abeo</h2>
           <a class="previous" href="#">&lt;</a>
           <figure>
-            <img data-src="images/paintings/1a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/2a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/3a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/4a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/5a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/6a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/7a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/8a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/9a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/10a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/11a.jpg">
-          </figure>
-          <figure>
-            <img data-src="images/paintings/12a.jpg">
-          </figure>
-          <figure>
             <img data-src="images/paintings/13a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
           </figure>
           <figure>
             <img data-src="images/paintings/14a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/6a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/1a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/2a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
           </figure>
           <a class="next" href="#">&gt;</a>
+        </article>
+        <article id="solus">
+          <h2>Solus</h2>
+          <a class="previous" href="#">&lt;</a>
+          <figure>
+            <img data-src="images/paintings/12a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic, pencil, transparent tape and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/3a.jpg">
+            <figcaption>
+              <h3>Acrylic, pencil, transparent tape and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/10a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic, pencil and petrolatum on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/4a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic, pencil and masking tape on canvas</h3>
+            </figcaption>
+          </figure>
+          <a class="next" href="#">&gt;</a>
+        </article>
+        <article id="existentia">
+          <h2>Existentia</h2>
+          <a class="previous" href="#">&lt;</a>
+          <figure>
+            <img data-src="images/paintings/5a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic, gouache and pencil on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/7a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic, gouache and pencil on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <a class="next" href="#">&gt;</a>
+        </article>
+        <article id="pulpa">
+          <h2>Pulpa</h2>
+          <a class="previous" href="#">&lt;</a>
+          <figure>
+            <img data-src="images/paintings/9a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and gouache on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img data-src="images/paintings/8a.jpg">
+            <figcaption>
+              <h3>Oil, acrylic and gouache on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
+          <a class="next" href="#">&gt;</a>
+        </article>
+        <article id="anon">
+          <h2>Anon</h2>
+          <figure>
+            <img data-src="images/paintings/11a.jpg">
+            <figcaption>
+              <h3>Acrylic and gouache on canvas</h3>
+              <p>180 × 140 cm (71 × 55 in.), 2010</p>
+            </figcaption>
+          </figure>
         </article>
         <article id="photography">
           <a class="previous" href="#">&lt;</a>
